<resources>
    <string name="app_name">Jaringan Pintar</string>
    <string name="university_name">UNIVERSITAS NEGERI MEDAN</string>
    <string name="faculty_name">FAKULTAS TEKNIK</string>
    <string name="main_title">TEKNIK JARINGAN KOMPUTER \u0026 TELEKOMUNIKASI</string>
    <string name="button_start">START</string>
    <string name="card_label">MODUL PENGANTAR</string>
    <string name="card_title">Dasar-Dasar Teknik Jaringan Komputer dan Telekomunikasi</string>
    <string name="card_desc">Memahami konsep dasar jaringan, topologi, dan infrastruktur.</string>
    <string name="menu_logo_desc">Logo UNIMED</string>
    <string name="menu_sound_toggle">Tombol suara</string>
    <string name="menu_home">Home</string>
    <string name="menu_tujuan">Tujuan Pembelajaran</string>
    <string name="menu_materi">Materi</string>
    <string name="menu_video">Video Pembelajaran</string>
    <string name="menu_quiz">Quiz</string>
    <string name="menu_petunjuk">Petunjuk Pengguna</string>
    <string name="menu_profil">Profil Pengguna</string>
    <string name="menu_sound_on">Suara aktif</string>
    <string name="menu_sound_off">Suara nonaktif</string>
    <string name="menu_page_coming_soon">Halaman belum tersedia</string>
    <string name="judul_halaman">Tujuan Pembelajaran</string>
    <string name="capaian_pembelajaran_text">Pada akhir Fase E, peserta didik diharapkan mampu memahami perkembangan teknologi pada perangkat teknik jaringan komputer dan telekomunikasi, meliputi teknologi 5G, Microwave Link, IPv6, Teknologi Serat Optik, Internet of Things (IoT), Cloud Computing, Data Center dan Information Security, Serta memahami isu-isu implementasi teknologi jaringan dan telekkomunikasi terkini seperti keamanan informasi dan penetrasi internet.

</string>
    <string-array name="tujuan_pembelajaran_list">
        <item>Memahami perkembangan teknologi jaringan 5G.</item>
        <item>Memahami konsep Microwave Link pada jaringan telekomunikasi.</item>
        <item>Memahami teknologi IP.</item>
        <item>Memahami teknologi komunikasi menggunakan Fiber Optik.</item>
        <item>Memahami konsep Internet Of Thing (IoT).</item>
        <item>Memahami fungsi dan peran Data Center.</item>
        <item>Memahami konsep Cloud Computing dan Information Security.</item>
        <item>Memahami isu perkembangan teknologi jaringan seperti keamanan informasi dan penetrasi internet.</item>
    </string-array>
    <string name="title_materi_1">Apa itu Fiber Optik ?</string>
    <string name="isi_materi_1"><![CDATA[
    <b>1. FIBER OPTIK</b><br><br>
    Fiber optik adalah jenis kabel yang terbuat dari serat kaca atau plastik sangat halus (lebih tipis dari rambut manusia) yang digunakan untuk mentransmisikan data dalam bentuk pulsa cahaya. Teknologi ini mampu mengirimkan informasi berkecepatan tinggi dengan jangkauan jarak jauh, sering digunakan sebagai tulang punggung (backbone) internet modern dan jaringan telekomunikasi, berbeda dengan kabel tembaga yang menggunakan sinyal listrik.<br><br>
    Fiber optik digunakan untuk mengirim data dengan kecepatan tinggi dan jarak jauh. Teknologi ini banyak digunakan pada jaringan internet modern karena memiliki kualitas transmisi yang sangat baik. Fiber optik menjadi salah satu teknologi komunikasi modern yang sangat penting dalam perkembangan jaringan komputer dan telekomunikasi. Teknologi ini digunakan untuk mengirim informasi seperti: data internet, suara, video, dan komunikasi digital lainnya.<br><br><br>

    <b>2. MEDIA TRANSMISI JARINGAN</b><br><br>
    Media Transmisi adalah media atau jalur yang digunakan untuk mengirimkan data dari satu perangkat ke perangkat lainnya dalam suatu jaringan komputer. Media transmisi memiliki fungsi utama sebagai penghantar sinyal komunikasi agar perangkat jaringan dapat saling bertukar informasi.<br><br>

    <b>Data dapat dikirim dalam bentuk:</b><br>
    &#8226; Sinyal listrik<br>
    &#8226; Gelombang radio<br>
    &#8226; Cahaya<br><br>

    <b>Dalam jaringan modern, media transmisi sangat penting karena mempengaruhi:</b><br>
    &#8226; Kecepatan internet<br>
    &#8226; Kualitas jaringan<br>
    &#8226; Kestabilan komunikasi<br>
    &#8226; Kapasitas pengiriman data<br><br>
    Fiber optik menjadi salah satu media transmisi terbaik karena memiliki kemampuan transfer data yang sangat tinggi.<br><br><br>

    <b>3. FIBER OPTIK SEBAGAI MEDIA TRANSMISI JARINGAN MODERN</b><br><br>
    Fiber optik saat ini menjadi teknologi utama dalam jaringan modern karena mampu memenuhi kebutuhan komunikasi digital yang terus meningkat. Perkembangan internet, cloud computing, video streaming, game online, dan komunikasi digital menyebabkan kebutuhan transfer data menjadi semakin besar.<br><br>
    Oleh karena itu dibutuhkan media transmisi yang: cepat, stabil, aman, dan memiliki kapasitas besar. Fiber optik mampu memenuhi kebutuhan tersebut karena memiliki: bandwidth besar, kecepatan tinggi, dan gangguan sinyal yang sangat kecil.
    <br><br><b>4. SEJARAH KABEL FIBER OPTIK</b><br><br>
    Fiber Optik pertama kali dikembangkan oleh sekelompok peneliti yaitu Robert Maurer, Donald Keck, dan Peter Schultz. Mereka berhasil menciptakan serat optik yang dikenal dengan nama Optical Waveguide Fibers.<br><br>
    Teknologi tersebut mampu membawa informasi hingga 65.000 kali lebih banyak dibandingkan kabel tembaga. Informasi dikirim dalam bentuk gelombang cahaya yang dapat diterjemahkan kembali pada tujuan meskipun menempuh jarak ribuan kilometer. Perkembangan teknologi fiber optik membuka jalan bagi kemajuan sistem komunikasi modern. Awalnya fiber optik digunakan untuk layanan telepon jarak jauh, namun seiring perkembangan teknologi internet, fiber optik kini menjadi media utama dalam transmisi data dan komunikasi digital berkecepatan tinggi.<br><br>
    Secara fisik, kabel fiber optik terbuat dari serat kaca yang sangat halus dan dilapisi plastik pelindung. Diameter seratnya sangat kecil, bahkan lebih tipis dibandingkan rambut manusia, yaitu sekitar 120 mikrometer.<br><br>
    Berbeda dengan kabel berbahan tembaga, fiber optik memiliki ketahanan yang lebih baik terhadap gangguan elektromagnetik sehingga proses pengiriman data menjadi lebih stabil dan cepat. Selain itu, fiber optik bekerja berdasarkan prinsip indeks bias cahaya, yaitu perbandingan antara kecepatan cahaya di ruang hampa dengan kecepatan cahaya saat melewati medium tertentu. Prinsip inilah yang memungkinkan cahaya tetap merambat di dalam serat optik tanpa keluar dari jalurnya.<br><br>

    <b>Perkembangan fiber optik dari masa ke masa:</b><br>
    &#8226; <b>Tahun 1840 :</b> Para ilmuwan mulai meneliti prinsip pemantulan cahaya. Penelitian ini menunjukkan bahwa cahaya dapat dipantulkan dan diarahkan melalui media tertentu. Prinsip tersebut menjadi dasar teknologi fiber optik.<br>
    &#8226; <b>Tahun 1960 :</b> Teknologi laser ditemukan dan mulai digunakan sebagai sumber cahaya. Penemuan ini sangat penting karena cahaya laser mampu mengirimkan data dengan lebih cepat dan stabil melalui serat optik.<br>
    &#8226; <b>Tahun 1970 :</b> Fiber optik mulai dikembangkan sebagai media komunikasi. Pada masa ini, para peneliti berhasil menciptakan kabel fiber optik dengan kualitas transmisi yang lebih baik sehingga dapat digunakan untuk mengirim informasi jarak jauh.<br>
    &#8226; <b>Tahun 1980 :</b> Fiber optik mulai digunakan pada jaringan telepon dan sistem telekomunikasi. Teknologi ini membantu meningkatkan kualitas komunikasi karena memiliki kecepatan tinggi dan gangguan sinyal yang lebih kecil dibanding kabel tembaga.<br>
    &#8226; <b>Sekarang :</b> Fiber optik digunakan secara luas untuk jaringan internet berkecepatan tinggi, telekomunikasi, data center, TV kabel, hingga jaringan modern lainnya. Teknologi ini menjadi bagian penting dalam perkembangan transformasi digital dan komunikasi global.<br><br>
    Perkembangan fiber optik menunjukkan bahwa teknologi komunikasi terus mengalami kemajuan dari waktu ke waktu. Dari penelitian sederhana tentang cahaya hingga menjadi teknologi internet modern, fiber optik kini berperan penting dalam mendukung kebutuhan komunikasi dan pertukaran data yang cepat, stabil, dan efesien.
]]></string>
    <string name="title_materi_2">Karakteristik &amp; Fungsi Fiber Optik</string>
    <string name="video_title_short_1">Dasar Teknologi Fiber Optik</string>
    <string name="video_title_short_2">Simulasi Penyambungan Kabel</string>
    <string name="video_title_short_3">Konsep Dasar IoT</string>
    <string name="video_title_short_4">Cloud Computing</string>
    <string name="video_title_short_5">Infrastruktur Data Center</string>
    <string name="video_title_short_6">Alamat IP &amp; Subnetting</string>
    <string name="video_title_short_7">Teknologi Microwave Link</string>
    <string name="video_title_short_8">Sejarah Telekomunikasi</string>
</resources>